chore: Update icu4j to 77.1 (#14)